Fixes alignment on file upload name

--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -649,6 +649,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        margin-right: auto;
 
         &::before {
           position: absolute;
